# gst-telemetry

./: .gitignore  README.md  RESULT.md  TODO.md  meson.build  meson.options
docs/: CustomData.md  Layout.md  Segments.md  key_mapping.gpx  pipeline.plant
example/: align.layout.xml  climb.finder.xml  exprtk_test.cpp  layout.xml  simple.layout.xml  test.layout.xml
project/: AUTHORS  meson.build
project/plugins/: gsttelemetry.c  gsttelemetry.h  gsttelemetryoverlay.c  gsttelemetryoverlay.h  gsttelemetryplugin.c  meson.build
project/tools/: gsttelemetry.c  meson.build
sandbox/: segment_field_test.cpp
src/: buffer_pool.c  buffer_pool.h  gsttelemetry.c  gsttelemetry.h  gsttelemetryplugin.c  manager_c_api.cpp  manager_c_api.h  meson.build
src/api/: backend_c_api.h  meson.build
src/backend/: backend_c_api.cpp  manager.cpp  manager.h  meson.build  surface.h
src/backend/overlay/: layout.cpp  layout.h  meson.build
src/backend/overlay/elements/: chart_widget.cpp  chart_widget.h  conditional_element.cpp  conditional_element.h  datetime_widget.cpp  datetime_widget.h  element.cpp  element.h  meson.build  text_widget.cpp  text_widget.h  value_widget.cpp  value_widget.h
src/backend/overlay/elements/common/: color.h  meson.build  text_align.h
src/backend/overlay/widgets/: chart_widget.cpp  chart_widget.h  circle_widget.cpp  circle_widget.h  composite_text_widget.cpp  composite_text_widget.h  conditional_widget.cpp  conditional_widget.h  container_widget.cpp  container_widget.h  line_widget.cpp  line_widget.h  meson.build  rectangle_widget.cpp  rectangle_widget.h  root_widget.cpp  root_widget.h  string_widget.cpp  string_widget.h  text_widget.cpp  text_widget.h  timestamp_widget.cpp  timestamp_widget.h  widget.cpp  widget.h
src/backend/overlay/widgets/params/: alignment_parameter.cpp  alignment_parameter.h  boolean_parameter.cpp  boolean_parameter.h  color_parameter.cpp  color_parameter.h  expression.cpp  expression.h  formatted_parameter.cpp  formatted_parameter.h  meson.build  numeric_parameter.cpp  numeric_parameter.h  parameter.h  string_parameter.cpp  string_parameter.h  timestamp_parameter.cpp  timestamp_parameter.h
src/backend/track/: meson.build  track.cpp  track.h  value.cpp  value.h
src/backend/utils/: blocking_queue.h  color.h  meson.build  string_utils.h  text_align.h  time.cpp  time.h
src/backend/utils/logging/: backend.cpp  backend.h  log_backend.cpp  log_backend.h  log_level.h  logger.cpp  logger.h  meson.build  sink.h  stream_sink.cpp  stream_sink.h
src/trace/: meson.build  trace.c  trace.h  trace_categories.h  trace_event_names.h
subprojects/: exprtk.wrap
subprojects/packagefiles/exprtk/: meson.build
test/: test.py  test.sh
