cpp_sources += files(
  'widget.cpp',
  'container_widget.cpp',
  'conditional_widget.cpp',
  'circle_widget.cpp',
  'string_widget.cpp',
  'text_widget.cpp',
  'timestamp_widget.cpp',
)

headers += files(
  'widget.h',
  'container_widget.h',
  'conditional_widget.h',
  'circle_widget.h',
  'string_widget.h',
  'text_widget.h',
  'timestamp_widget.h',
)

subdir('params')
