cpp_sources += files(
  'widget.cpp',
  'container_widget.cpp',
  'conditional_widget.cpp',
  'circle_widget.cpp',
  'string_widget.cpp',
  'text_widget.cpp',
  'timestamp_widget.cpp',
  'composite_text_widget.cpp',
  'chart_widget.cpp',
)

headers += files(
  'widget.h',
  'container_widget.h',
  'conditional_widget.h',
  'circle_widget.h',
  'string_widget.h',
  'text_widget.h',
  'timestamp_widget.h',
  'composite_text_widget.h',
  'chart_widget.h',
)

subdir('params')
