cpp_sources += files(
  'parameter.cpp',
  'numeric_parameter.cpp',
  'string_parameter.cpp',
  'formatted_parameter.cpp',
  'color_parameter.cpp',
  'alignment_parameter.cpp',
  'boolean_parameter.cpp',
  'expression.cpp',
)

headers += files(
  'parameter.h',
  'numeric_parameter.h',
  'string_parameter.h',
  'formatted_parameter.h',
  'color_parameter.h',
  'alignment_parameter.h',
  'boolean_parameter.h',
  'expression.h',
)
